--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>learning git</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <h1>welcome git users</h1>
+    <nav>
+        <ul>
+            <li>Home</li>
+            <li>Blog</li>
+            <li>About</li>
+            <li>Contact</li>
+        </ul>
+    </nav>
     
 </body>
 </html>
