--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
             <li>About</li>
             <li>Contact</li>
         </ul>
+        <div>
+            <button>Learn more</button>
+        </div>
     </nav>
     
 </body>
