added go file which is empty

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
             <button>Learn more</button>
         </div>
     </nav>
+    <header>
+        <h2>My header</h2>
+    </header>
     
 </body>
 </html>
