--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     </nav>
     <header>
         <h2>My header</h2>
+        <p>This is very informatic and help in collaboration with other team member</p>
     </header>
     
 </body>
